--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,7 @@
                             </li> -->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/">Developer</a>
+                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/" target="_blank">Developer</a>
                             </li>
 
                             <li class="nav-item">
@@ -139,13 +139,7 @@
                             <h1>Welcome to MegaBot Where <div class="title-effect">
                                 <img src="{% static 'assets/images/title-effect.png'%}" alt=""><span style="color: cyan;">Knowledge</span>
                                 </div> Meets Logic!</h1>
-                            <p>
-                                Megabot is a robust AI tool that uses artificial intelligence algorithms to generate
-                                various kinds of content.
-                                The tool was developed to support users with effortlessly generating high-quality
-                                content, saving both energy and time while maintaining an uninterrupted level of
-                                creativity and accuracy.
-                            </p>
+                            <p>Discover the future of communication with Megabot—an advanced AI platform designed to enhance productivity and revolutionize how you engage. Harnessing cutting-edge technology, Megabot offers an array of innovative features including face detection, speech-to-text, and real-time triggers. Empower your workflow with seamless interactions and efficient task execution, all within a single, user-friendly platform where creativity thrives.</p>
                             <a href="{% url 'chat' %}" data-cursor="pointer" class="chat-button">
                                 <button class="butto" data-text="Chat Now">
                                   <span class="actual-text">&nbsp;Chat&nbsp;</span>
@@ -1139,7 +1133,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+<!--                 <div class="accordion-item">
                     <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
                         <button data-cursor="pointer" class="accordion-button collapsed" type="button"
                             data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
@@ -1218,7 +1212,7 @@
                             No, there is no inherent limit to the amount of stuff you can create. The possibilities are
                             virtually limitless.
                         </div>
-                    </div>
+                    </div> -->
                 </div> 
             </div>
         </div>
@@ -1325,7 +1319,7 @@
             <div class="footer-copyright">
                 <h4>Made with <span style="color: red;">❤️</span> by <a href="https://portfolio0.pythonanywhere.com/">Ahmed Bilal Bhatti</a></h4>
                 <ul class="footer-links">
-                    <li><a href="terms.html">Privacy Policy </a></li>
+                    <!-- <li><a href="terms.html">Privacy Policy </a></li> -->
                     <li><a href="terms.html">Terms & Condition </a></li>
                 </ul>
             </div>
