--- a/templates/contact-us.html
+++ b/templates/contact-us.html
@@ -101,10 +101,10 @@
                                     </li>
                                 </ul>
                             </li> -->
-
                             <li class="nav-item">
-                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/">Developer</a>
+                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/" target="_blank">Developer</a>
                             </li>
+
 
                             <li class="nav-item">
                                 <a class="nav-link" href="{% url 'about' %}">About</a>
@@ -331,7 +331,7 @@
             <div class="footer-copyright">
                 <h4>Made with <span style="color: red;">❤️</span> by <a href="https://portfolio0.pythonanywhere.com/">Ahmed Bilal Bhatti</a></h4>
                 <ul class="footer-links">
-                    <li><a href="terms.html">Privacy Policy </a></li>
+                    <!-- <li><a href="terms.html">Privacy Policy </a></li> -->
                     <li><a href="terms.html">Terms & Condition </a></li>
                 </ul>
             </div>
