--- a/templates/service.html
+++ b/templates/service.html
@@ -102,7 +102,7 @@
                             </li> -->
 
                             <li class="nav-item">
-                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/">Developer</a>
+                                <a class="nav-link" href="https://portfolio0.pythonanywhere.com/" target="_blank">Developer</a>
                             </li>
 
                             <li class="nav-item active">
@@ -485,7 +485,7 @@
             <div class="footer-copyright">
                 <h4>Made with <span style="color: red;">❤️</span> by <a href="https://portfolio0.pythonanywhere.com/">Ahmed Bilal Bhatti</a></h4>
                 <ul class="footer-links">
-                    <li><a href="terms.html">Privacy Policy </a></li>
+                    <!-- <li><a href="terms.html">Privacy Policy </a></li> -->
                     <li><a href="terms.html">Terms & Condition </a></li>
                 </ul>
             </div>
