--- a/templates/index.html
+++ b/templates/index.html
@@ -1117,103 +1117,23 @@
                 <h2 class="text-white">Have inquiries? In our FAQ, you'll find all the solutions you need.</h2>
             </div>
             <div class="accordion" id="accordionPanelsStayOpenExample">
+                {% for entry in faq %}
                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-                        <button data-cursor="pointer" class="accordion-button" type="button" data-bs-toggle="collapse"
-                            data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true"
-                            aria-controls="panelsStayOpen-collapseOne">
-                            Is the content unique?
+                    <h2 class="accordion-header" id="panelsStayOpen-heading{{ forloop.counter }}">
+                        <button data-cursor="pointer" class="accordion-button collapsed" type="button"
+                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapse{{ forloop.counter }}"
+                            aria-expanded="false" aria-controls="panelsStayOpen-collapse{{ forloop.counter }}">
+                            {{ entry.question }}
                         </button>
                     </h2>
-                    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show"
-                        aria-labelledby="panelsStayOpen-headingOne">
+                    <div id="panelsStayOpen-collapse{{ forloop.counter }}" class="accordion-collapse collapse"
+                        aria-labelledby="panelsStayOpen-heading{{ forloop.counter }}">
                         <div class="accordion-body">
-                            <p>Given that it is generated in real-time from the data and context given, MegaBot's
-                                content is indeed distinctive. </p>
+                            <p>{{ entry.answer }}</p>
                         </div>
                     </div>
                 </div>
-<!--                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-                        <button data-cursor="pointer" class="accordion-button collapsed" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseTwo">
-                            How can I boost traffic with Megabot?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse"
-                        aria-labelledby="panelsStayOpen-headingTwo">
-                        <div class="accordion-body">
-                            Leverage AI-driven analytics to identify and target your audience with personalised content
-                            and recommendations.
-                        </div>
-                    </div>
-                </div>
-                 <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-                        <button data-cursor="pointer" class="accordion-button collapsed" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree"
-                            aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-                            How long will it take to write an article with AI?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse"
-                        aria-labelledby="panelsStayOpen-headingThree">
-                        <div class="accordion-body">
-                            with advanced AI models, it's possible to generate an article within minutes or even
-                            seconds.
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingFour">
-                        <button data-cursor="pointer" class="accordion-button collapsed" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFour"
-                            aria-expanded="false" aria-controls="panelsStayOpen-collapseFour">
-                            Is there a limit to the amount of stuff that I can create?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse"
-                        aria-labelledby="panelsStayOpen-headingFour">
-                        <div class="accordion-body">
-                            No, there is no inherent limit to the amount of stuff you can create. The possibilities are
-                            virtually limitless.
-
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingFive">
-                        <button data-cursor="pointer" class="accordion-button collapsed" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseFive"
-                            aria-expanded="false" aria-controls="panelsStayOpen-collapseFive">
-                            What languages do you support?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse"
-                        aria-labelledby="panelsStayOpen-headingFive">
-                        <div class="accordion-body">
-                            No, there is no inherent limit to the amount of stuff you can create. The possibilities are
-                            virtually limitless.
-                        </div>
-                    </div>
-                </div>
-                <div class="accordion-item">
-                    <h2 class="accordion-header" id="panelsStayOpen-headingSix">
-                        <button data-cursor="pointer" class="accordion-button collapsed" type="button"
-                            data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseSix" aria-expanded="false"
-                            aria-controls="panelsStayOpen-collapseSix">
-                            Is there a limit to the amount of stuff I can create?
-                        </button>
-                    </h2>
-                    <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse"
-                        aria-labelledby="panelsStayOpen-headingSix">
-                        <div class="accordion-body">
-                            No, there is no inherent limit to the amount of stuff you can create. The possibilities are
-                            virtually limitless.
-                        </div>
-                    </div> -->
-                </div> 
+                {% endfor %}
             </div>
         </div>
     </section>
@@ -1221,7 +1141,7 @@
 
 
     <!-- contact us start -->
-<!--     <section class="info-section section-b-space">
+   <section class="info-section section-b-space">
         <div class="container">
             <div class="info-box" data-aos="fade-in" data-aos-duration="1000" data-aos-delay="100">
                 <div class="hand-effect d-md-block d-none">
@@ -1234,18 +1154,18 @@
                 <p>With the help of our ground-breaking AI tool, unlock the potential of cutting-edge AI technology and
                     increase your productivity to new heights. Embrace the
                     future today and let our AI tool redefine what's possible for you.</p>
-                <ul>
+<!--                 <ul>
                     <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Free images for lifetime</li>
                     <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Get details on any topic</li>
                     <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">Quick advisor to help you</li>
                     <li><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/tick.svg" class="img-fluid" alt="tick">15+ category to explore</li>
-                </ul>
-                <a data-cursor="pointer" class="btn-arrow" href="#">
+                </ul> -->
+                <a data-cursor="pointer" class="btn-arrow" href="{% url 'contact' %}">
                     <div class="icon-arrow"><i class="iconsax" data-icon="arrow-up"></i></div>Contact us now
                 </a>
             </div>
         </div>
-    </section> -->
+    </section> 
     <!-- contact us end -->
 
     <!-- footer section start-->
@@ -1370,5 +1290,24 @@
     <!-- Theme js-->
     <script src="{% static 'assets/js/script.js'%}"></script>
 
+    <script>
+        document.onkeydown = (e) => {
+    if (e.key == 123) {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key == 'I') {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key == 'C') {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.shiftKey && e.key == 'J') {
+        e.preventDefault();
+    }
+    if (e.ctrlKey && e.key == 'U') {
+        e.preventDefault();
+    }
+    };
+    </script>
 </body>
 </html>
