--- a/templates/index.html
+++ b/templates/index.html
@@ -196,10 +196,8 @@
                                     <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service/copy-bold.svg" class="img-fluid bold-icon" alt="">
                                 </div>
                                 <div class="service-content">
-                                    <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect" class="img-fluid">Copy
-                                        writer</h3>
-                                    <p>Unleash the power of AI to effortlessly compelling content that captivates
-                                        and converts.</p>
+                                    <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect" class="img-fluid">Real-time Triggers</h3>
+                                    <p>Trigger actions instantly with our state-of-the-art AI technology, responding to real-time events and interactions.</p>
                                 </div>
                             </div>
                         </div>
@@ -211,9 +209,8 @@
                                 </div>
                                 <div class="service-content">
                                     <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect"
-                                            class="img-fluid">Digital
-                                        marketers</h3>
-                                    <p>Accelerate your marketing and take over the digital landscape</p>
+                                     class="img-fluid">AI Assistants</h3>
+                                    <p>Enhance productivity and streamline communication with AI-powered virtual assistants.</p>
                                 </div>
                             </div>
                         </div>
@@ -224,10 +221,8 @@
                                     <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service/search-bold.svg" class="img-fluid bold-icon" alt="">
                                 </div>
                                 <div class="service-content">
-                                    <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect" class="img-fluid">SEO
-                                        Sepcialist</h3>
-                                    <p>Generate more engaging content to skyrocket your website’s visibility
-                                    </p>
+                                <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect" class="img-fluid">Memory Management</h3>
+                                <p>Optimize your system's memory usage and streamline performance for seamless multitasking.</p>
                                 </div>
                             </div>
                         </div>
@@ -238,11 +233,8 @@
                                     <img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service/text-bold.svg" class="img-fluid bold-icon" alt="">
                                 </div>
                                 <div class="service-content">
-                                    <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect"
-                                            class="img-fluid">Content
-                                        marker</h3>
-                                    <p>Reinvent your content marketing and captivate your audience like never before.
-                                    </p>
+                                    <h3><img src="https://themes.pixelstrap.net/mega_bot/assets/svg/service-title.svg" alt="effect" class="img-fluid">Content Innovator</h3>
+                                    <p>Revolutionize your content strategy and engage your audience with innovative approaches.</p>
                                 </div>
                             </div>
                         </div>
@@ -252,15 +244,11 @@
                     <div class="service-info">
                         <div>
                             <div class="title">
-                                <h2>For All Kind of Creators</h2>
-                                <h3>In the digital world, our AI Writer supports a variety of artists</h3>
+                                <h2>Empowering Visionaries Everywhere</h2>
+                                <h3>Unlocking the potential of AI for visionaries and innovators</h3>
                             </div>
-                            <p>Introducing a revolutionary AI partner for creators across the globe—a groundbreaking
-                                tool designed to transform the way we bring our creative ideas to life. Unleash your
-                                artistic abilities as you explore a world of limitless possibilities. Say goodbye to
-                                obstacles and let
-                                this remarkable AI companion pave the way to a new era of boundless creation.</p>
-                            <a data-cursor="pointer" class="btn-arrow" href="#">
+                            <p>Introducing a game-changing AI solution crafted to empower visionaries and innovators worldwide. Revolutionize your creative process with our advanced AI technology, offering unparalleled support and inspiration. Embrace limitless possibilities and overcome barriers with ease as you embark on a journey of boundless innovation. Join us in shaping the future of creativity and discovery.</p>
+                            <a data-cursor="pointer" class="btn-arrow" href="{% url 'about' %}">
                                 <div class="icon-arrow"><i class="iconsax" data-icon="arrow-up"></i></div>View all
                             </a>
                         </div>
